Added reactive form and template driven forms

--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -33,7 +33,14 @@
         [account]="acc"
         [id]="i"></app-account>
     </div>
+  </div>  
+  <div class="container">
+    <app-user-form></app-user-form>
   </div>
 
+  <hr>
+  <div class="row">
+   <app-reactive-user-form></app-reactive-user-form>
+  </div>
   </div>
   
