added new features

--- a/first-app/src/app/app.component.html
+++ b/first-app/src/app/app.component.html
@@ -37,10 +37,16 @@
   <div class="container">
     <app-user-form></app-user-form>
   </div>
-
+  <hr>
+  <div class="row">
+    <app-http-demo></app-http-demo>
+  </div>
   <hr>
   <div class="row">
    <app-reactive-user-form></app-reactive-user-form>
   </div>
+  <hr/>
+  <app-pipe-demo></app-pipe-demo>
+
   </div>
   
